# AI_powered_web_assistant

./: .env.example  .gitignore  PROJECT_SUMMARY.md  README.md  check_models.py
ai_library_pkg/: README.md  pyproject.toml  setup.py
ai_library_pkg/my_ai_lib/: __init__.py  core.py
web_app/: app.py  requirements.txt
web_app/templates/: config.html  index.html
